--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "cookie-consent",
+    "name": "@blateral/cookie-consent",
     "version": "1.0.0",
     "description": "Made with create-react-library",
-    "author": "ic3m3n",
+    "author": "Alexander Rieß<alexander.riess@blateral.com>",
     "license": "MIT",
     "repository": "ic3m3n/cookie-consent",
     "main": "dist/index.js",
