--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@blateral/cookie-consent",
+    "name": "@ic3m3n/cookie-consent",
     "version": "1.0.0",
     "description": "Made with create-react-library",
     "author": "Alexander Rieß<alexander.riess@blateral.com>",
