--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@ic3m3n/cookie-consent",
+    "name": "@blateral/cookie-consent",
     "version": "1.0.0",
-    "description": "Made with create-react-library",
+    "description": "Generic consent cookie",
     "author": "Alexander Rieß<alexander.riess@blateral.com>",
     "license": "MIT",
-    "repository": "ic3m3n/cookie-consent",
+    "repository": "blateral/cookie-consent",
     "main": "dist/index.js",
     "module": "dist/index.modern.js",
     "source": "src/index.tsx",
