--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@blateral/cookie-consent",
+    "name": "@ic3m3n/cookie-consent",
     "version": "0.1.0",
     "description": "Generic consent cookie",
     "author": "Alexander Rieß<alexander.riess@blateral.com>",
