--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "scripts": {
         "build": "microbundle-crl --no-compress --format modern,cjs,umd",
         "start": "microbundle-crl watch --no-compress --format modern,cjs,umd",
-        "build:static": "microbundle-crl --no-compress --format modern,cjs,umd -i src/static.ts -o dist/static",
-        "start:static": "microbundle-crl watch --no-compress --format modern,cjs,umd -i src/static.ts -o dist/static",
+        "build:static": "webpack",
+        "start:static": "webpack --watch",
         "prepublish": "run-s build",
         "test": "run-s test:unit test:lint test:build",
         "test:build": "run-s build",
@@ -30,7 +30,6 @@
     },
     "devDependencies": {
         "@types/react": "^16.9.27",
-        "microbundle-crl": "^0.13.8",
         "babel-eslint": "^10.0.3",
         "cross-env": "^7.0.2",
         "eslint": "^6.8.0",
@@ -44,13 +43,18 @@
         "eslint-plugin-react": "^7.17.0",
         "eslint-plugin-standard": "^4.0.1",
         "gh-pages": "^2.2.0",
+        "microbundle-crl": "^0.13.8",
         "npm-run-all": "^4.1.5",
         "prettier": "^1.19.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "^3.4.1"
+        "react-scripts": "^3.4.1",
+        "ts-loader": "^7.0.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
     },
     "files": [
         "dist"
-    ]
+    ],
+    "dependencies": {}
 }
