--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "build": "microbundle-crl --no-compress --format modern,cjs,umd",
         "start": "microbundle-crl watch --no-compress --format modern,cjs,umd",
         "build:static": "webpack",
-        "start:static": "webpack --watch",
+        "serve:static": "webpack-dev-server --open --hot",
+        "watch:static": "webpack -w",
+        "start:static": "npm-run-all --parallel watch:static serve:static",
         "prepublish": "run-s build",
         "test": "run-s test:unit test:lint test:build",
         "test:build": "run-s build",
@@ -47,6 +49,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^1.19.1",
         "react": "^16.13.1",
+        "react-dev-server": "^0.6.2",
         "react-dom": "^16.13.1",
         "react-scripts": "^3.4.1",
         "ts-loader": "^7.0.1",
