--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build": "microbundle-crl --no-compress --format modern,cjs,umd",
         "start": "microbundle-crl watch --no-compress --format modern,cjs,umd",
         "build:static": "webpack",
-        "serve:static": "webpack-dev-server --open --hot",
+        "serve:static": "webpack-dev-server --open",
         "watch:static": "webpack -w",
         "start:static": "npm-run-all --parallel watch:static serve:static",
         "prepublish": "run-s build",
@@ -44,6 +44,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-react": "^7.17.0",
         "eslint-plugin-standard": "^4.0.1",
+        "file-loader": "^6.0.0",
         "gh-pages": "^2.2.0",
         "microbundle-crl": "^0.13.8",
         "npm-run-all": "^4.1.5",
