--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@digiii/cookie-consent",
-    "version": "0.1.3",
+    "name": "@ic3m3n/cookie-consent",
+    "version": "0.1.4",
     "description": "Generic consent cookie",
     "author": "Alexander Rieß<alexander.riess@blateral.com>, Lukas Wochner<lukas.wochner@blateral.com>",
     "license": "MIT",
